Cluster/DBSCAN/x64/Debug/DBSCAN.log
  ANDROID_HOME=C:\Program Files (x86)\Android\android-sdk
  ANDROID_SDK_ROOT=C:\Program Files (x86)\Android\android-sdk
  ANT_HOME=
  JAVA_HOME=C:\Program Files\Android\jdk\jdk-8.0.302.8-hotspot\jdk8u302-b08
  NDK_ROOT=C:\\Microsoft\AndroidNDK\android-ndk-r23c
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppBuild.targets(517,5): warning MSB8004: Output 디렉터리가 슬래시로 끝나지 않습니다. Output 디렉터리의 적절한 평가를 허용하는 데 필요하므로 이 빌드 인스턴스에서 슬래시를 추가합니다.
  algoWrapper.cpp
  In file included from algoWrapper.cpp:1:
  In file included from ./DBSCAN.cpp:1:
./clusterInterface.cpp(4,14): error : redefinition of 'operator-'
  Point Point::operator-(Vector& mov) { return Point(x - mov.x, y - mov.y); }
               ^
  ./clusterInterface.h(119,14): note: previous definition is here
  Point Point::operator-(Vector& mov) { return Point(x - mov.x, y - mov.y); }
               ^
  In file included from algoWrapper.cpp:1:
  In file included from ./DBSCAN.cpp:1:
./clusterInterface.cpp(5,14): error : redefinition of 'operator+'
  Point Point::operator+(Vector& mov) { return Point(x + mov.x, y + mov.y); }
               ^
  ./clusterInterface.h(120,14): note: previous definition is here
  Point Point::operator+(Vector& mov) { return Point(x + mov.x, y + mov.y); }
               ^
  In file included from algoWrapper.cpp:1:
  In file included from ./DBSCAN.cpp:1:
./clusterInterface.cpp(6,15): error : redefinition of 'operator-'
  Vector Point::operator-(Point& sub) { return Vector(x - sub.x, y - sub.y); }
                ^
  ./clusterInterface.h(121,15): note: previous definition is here
  Vector Point::operator-(Point& sub) { return Vector(x - sub.x, y - sub.y); }
                ^
  In file included from algoWrapper.cpp:1:
  In file included from ./DBSCAN.cpp:1:
./clusterInterface.cpp(7,15): error : redefinition of 'toVector'
  Vector Point::toVector() { return Vector(x, y); }
                ^
  ./clusterInterface.h(122,15): note: previous definition is here
  Vector Point::toVector() { return Vector(x, y); }
                ^
algoWrapper.cpp(66,31): warning : 'convertRect' has C-linkage specified, but returns user-defined type 'ImgCluster::Rectangle' which is incompatible with C [-Wreturn-type-c-linkage]
          ImgCluster::Rectangle convertRect(struct Rectangle rect) {
                                ^
algoWrapper.cpp(70,28): warning : 'convertVector' has C-linkage specified, but returns user-defined type 'ImgCluster::Images' (aka 'vector<ImgCluster::ImageNode>') which is incompatible with C [-Wreturn-type-c-linkage]
          ImgCluster::Images convertVector(struct ImgArray images) {
                             ^
algoWrapper.cpp(107,24): error : no matching constructor for initialization of 'DBSCAN'
              return new DBSCAN();
                         ^
  ./DBSCAN.cpp(4,7): note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
  class DBSCAN : ImgCluster::ClusterAlgorithm {
        ^
  ./DBSCAN.cpp(4,7): note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
  ./DBSCAN.cpp(7,5): note: candidate constructor not viable: requires 4 arguments, but 0 were provided
      DBSCAN(ImgCluster::Images& images, ImgCluster::Rectangle& rect, int minPts, double eps);
      ^
algoWrapper.cpp(129,13): warning : delete called on non-final 'DBSCAN' that has virtual functions but non-virtual destructor [-Wdelete-non-abstract-non-virtual-dtor]
              delete ((DBSCAN*)algoClass);
              ^
  3 warnings and 5 errors generated.
